Fix connection string in web.config

--- a/DEV/VPD/Web.Debug.config
+++ b/DEV/VPD/Web.Debug.config
@@ -14,6 +14,16 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add name="conn" 
+         connectionString="Database=VPD;Data Source=localhost;UserId=admin;Password=admin" 
+         providerName="MySql.Data.MySqlClient" 
+         xdt:Transform="Insert" 
+         xdt:Locator="Match(name)"
+         />
+  </connectionStrings>
+  
   <system.webServer>
     <caching enabled="false" xdt:Transform="Insert">
     </caching>
