--- a/DEV/VPD/Web.Release.config
+++ b/DEV/VPD/Web.Release.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add xdt:Transform="Remove"
+      xdt:Locator="XPath(configuration/connectionStrings[@name='ConnStr2'])" />
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
