Fixing conn string in web.config

--- a/DEV/VPD/Web.Base.config
+++ b/DEV/VPD/Web.Base.config
@@ -25,6 +25,7 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
+    <add name="conn" />
   </connectionStrings>
   <system.webServer>
     <handlers>
