--- a/DEV/VPD/Web.Debug.config
+++ b/DEV/VPD/Web.Debug.config
@@ -19,7 +19,7 @@
     <add name="conn" 
          connectionString="Database=VPD;Data Source=localhost;UserId=admin;Password=admin" 
          providerName="MySql.Data.MySqlClient" 
-         xdt:Transform="Insert" 
+         xdt:Transform="SetAttributes" 
          xdt:Locator="Match(name)"
          />
   </connectionStrings>
