--- a/DEV/VPD/Web.Release.config
+++ b/DEV/VPD/Web.Release.config
@@ -15,8 +15,12 @@
     </connectionStrings>
   -->
   <connectionStrings>
-    <add xdt:Transform="Remove"
-      xdt:Locator="XPath(configuration/connectionStrings[@name='ConnStr2'])" />
+    <add name="conn"
+         connectionString=""
+         providerName="MySql.Data.MySqlClient"
+         xdt:Transform="SetAttributes"
+         xdt:Locator="Match(name)"
+         />
   </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
