--- a/DEV/VPD/Web.config
+++ b/DEV/VPD/Web.config
@@ -25,7 +25,9 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
-    <add name="conn" connectionString="Database=VPD;Data Source=localhost;UserId=admin;Password=admin" providerName="MySql.Data.MySqlClient"/>
+    <add name="conn"
+      connectionString="Database=VPD;Data Source=localhost;UserId=admin;Password=admin"
+      providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
